Co-authored-by: Manuel Afonso dos Santos Ratola <ist1100339@tecnico.ulisboa.pt>

--- a/Projeto/Dataframe_for_ML.ipynb
+++ b/Projeto/Dataframe_for_ML.ipynb
@@ -8,15 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# import data from CSV\n",
     "data = pd.read_csv(\"Output_ZPrimeBoostedAnalysis/data.csv\", delimiter=\" \")\n",
     "\n",
@@ -118,27 +110,15 @@
     "ZPrime1000[\"label\"] = 1\n",
     "\n",
     "bkg_dataframe=pd.concat([bkg_singletop,bkg_Vjets,ttbar_lep,bkg_lv],ignore_index=True)\n",
-    "dataframe = pd.concat([ZPrime1000,bkg_dataframe],ignore_index=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ttbar_lep.to_csv(\"ttbar_dataframe\")\n",
-    "#bkg_singletop.to_csv(\"bgk_singletop_dataframe\")\n",
-    "#bkg_Vjets.to_csv(\"bkg_Vjets_dataframe\")\n",
-    "#bkg_dataframe.to_csv(\"bkg_dataframe\")\n",
-    "#ZPrime1000.to_csv(\"ZPrime1000_dataframe\")\n",
+    "dataframe = pd.concat([ZPrime1000,bkg_dataframe],ignore_index=True)\n",
+    "\n",
     "dataframe[\"scaleweight\"] = dataframe[\"weight\"]*dataframe[\"scale\"]\n",
     "dataframe.to_csv(\"dataframe.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -524,65 +504,13 @@
        "[252096 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nleadbjet_eta    +\\nleadbjet_pt     +\\nleadjet_eta     +\\nleadjet_pt      +\\n\\nleadLRjet_eta   \\nleadLRjet_m     \\nleadLRjet_phi   \\nleadLRjet_pt    \\nleadLRjet_tau32 \\n\\nn_bjets         + \\nn_jets          +\\nn_leadLRjets    \\nttbarMLR\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# etmiss = MET\n",
-    "# mtw \n",
-    "# lep_charge = Q_leadlep (leadleptch)\n",
-    "# lep_type = leadleptID\n",
-    "# lepton_1_eta = leadleptEta\n",
-    "# lepton_1_E = leadleptE\n",
-    "# lepton_1_phi = leadleptPhi\n",
-    "# lepton_1_pt = leadleptPt\n",
-    "# largeRjet_tau32 = leadTopLRjet_Tau32\n",
-    "# largeRjet_m = leadTopLRjet_m\n",
-    "# largeRjet_phi = leadTopLRjet_phi\n",
-    "# largeRjet_eta = leadTopLRjet_eta\n",
-    "# largeRjet_pt = leadTopLRjet_pt\n",
-    "# TopLRjet_n = n_TopLRjets\n",
-    "\n",
-    "# MISSING:\n",
-    "\"\"\"\n",
-    "leadbjet_eta    +\n",
-    "leadbjet_pt     +\n",
-    "leadjet_eta     +\n",
-    "leadjet_pt      +\n",
-    "\n",
-    "leadLRjet_eta   \n",
-    "leadLRjet_m     \n",
-    "leadLRjet_phi   \n",
-    "leadLRjet_pt    \n",
-    "leadLRjet_tau32 \n",
-    "\n",
-    "n_bjets         + \n",
-    "n_jets          +\n",
-    "n_leadLRjets    \n",
-    "ttbarMLR\n",
-    "\"\"\""
    ]
   }
  ],
