--- a/Projeto/Dataframe_for_ML.ipynb
+++ b/Projeto/Dataframe_for_ML.ipynb
@@ -512,6 +512,31 @@
    "source": [
     "dataframe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ZPrime1000.to_csv(\"ZPrime1000.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bkg_dataframe.to_csv(\"bkg_dataframe.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
